# adeeb_fastapi

./: .containerignore  .env.example  .gitignore  .pdm-python  Containerfile  README.md  compose.yaml  pyproject.toml
adeeb_fastapi/: config.py  main.py
adeeb_fastapi/cache/: index.py
adeeb_fastapi/components/adeebs/: router.py  schemas.py
adeeb_fastapi/components/chosen_verses/: router.py  schemas.py
adeeb_fastapi/components/orders/: router.py  schemas.py  shared.py
adeeb_fastapi/components/poems/: router.py  schemas.py
adeeb_fastapi/components/prose_qoutes/: router.py  schemas.py
adeeb_fastapi/components/users/: router.py  schemas.py
adeeb_fastapi/database/: index.py  joins.py  models.py
adeeb_fastapi/schemas/: adeebs.py  api.py  chosen_verses.py  general.py  orders.py  poems.py  prints.py  prose_qoutes.py  users.py
adeeb_fastapi/utils/: auth.py  middlewares.py  rate_limiter.py
json/: CreateManyAdeeb.json  CreateManyAdeeb_Req.json  CreateManyChosenVerses_Req.json  CreateManyPoems_Req.json  CreateManyProses_Req.json  CreateOrder_req.json
tests/: test_main.py
tests/utils/: test_auth.py
