[project]
name = "adeeb_fastapi"
version = "0.1.0"
description = "An iteration for Adeeb's REST API"
authors = [
    {name = "m-shrief",email = "m.shrief.dev@proton.me"}
]
license = "MIT"
requires-python = ">=3.14,<4"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "scalar-fastapi (>=1.8.2,<2.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt[crypto] (>=2.12.1,<3.0.0)",
    "fastapi-limiter (>=0.2.0,<0.3.0)",
    "valkey-glide (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
